--- a/src/app/_components/dashboard/dashboard.component.html
+++ b/src/app/_components/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
-<ul *ngIf="!isEmptyObject(userinfo)">
-  <li>{{userinfo.data.user.name}}</li>
-</ul>
-<p>this is text para</p>
-
-<button class="btn btn-lg btn-custom" type="submit" (click)="logout()" [disabled]="loader" style="width: 150px;"><span *ngIf="!loader">Log Out</span> <i *ngIf="loader" class="fas fa-spinner fa-spin"></i></button>
+<div id="wrapper">
+	<app-sidebar></app-sidebar>
+	<div class="content-page">
+    	<app-header></app-header>
+	</div>
+</div>
+<!--<button class="btn btn-lg btn-custom" type="submit" (click)="logout()" [disabled]="loader" style="width: 150px;"><span *ngIf="!loader">Log Out</span> <i *ngIf="loader" class="fas fa-spinner fa-spin"></i></button> -->
+<app-footer></app-footer>
