--- a/src/app/_components/sidebar/sidebar.component.html
+++ b/src/app/_components/sidebar/sidebar.component.html
@@ -1,3 +1,116 @@
-<p>
-  sidebar works!
-</p>
+<div class="left side-menu">
+
+  <div class="slimscroll-menu" id="remove-scroll">
+
+      <!-- LOGO -->
+      <div class="topbar-left">
+          <a href="index.html" class="logo">
+              <span>
+                  <img src="assets/img/logo_light.png" alt="" height="22">
+              </span>
+              <i>
+                  <img src="assets/img/logo_sm.png" alt="" height="28">
+              </i>
+          </a>
+      </div>
+
+      <!-- User box -->
+      <div class="user-box">
+          <div class="user-img">
+              <img src="assets/img/users/avatar-1.jpg" alt="user-img" title="Mat Helme" class="rounded-circle img-fluid">
+          </div>
+          <h5><a href="#">Maxine Kennedy</a> </h5>
+          <p class="text-muted">Admin Head</p>
+      </div>
+
+      <!--- Sidemenu -->
+      <div id="sidebar-menu">
+
+          <ul class="metismenu" id="side-menu">
+
+              <!--<li class="menu-title">Navigation</li>-->
+
+              <li>
+                  <a [routerLink]="['/dashboard']" >
+					<i class="fas fa-tachometer-alt"></i><span class="badge badge-danger badge-pill pull-right">7</span> <span> Dashboard </span>
+                  </a>
+              </li>
+
+              <li>
+                  <a href="javascript: void(0);"><i class="fas fa-layer-group"></i> <span> Apps </span> <span class="menu-arrow"></span></a>
+                  <ul class="nav-second-level collapse" aria-expanded="false">
+                      <li><a href="apps-calendar.html">Calendar</a></li>
+                      <li><a href="apps-tickets.html">Tickets</a></li>
+                      <li><a href="apps-taskboard.html">Task Board</a></li>
+                      <li><a href="apps-task-detail.html">Task Detail</a></li>
+                      <li><a href="apps-contacts.html">Contacts</a></li>
+                      <li><a href="apps-projects.html">Projects</a></li>
+                      <li><a href="apps-companies.html">Companies</a></li>
+                      <li><a href="apps-file-manager.html">File Manager</a></li>
+                  </ul>
+              </li>
+
+              <li>
+                  <a href="javascript: void(0);"><i class="fas fa-envelope"></i><span> Email </span> <span class="menu-arrow"></span></a>
+                  <ul class="nav-second-level collapse" aria-expanded="false">
+                      <li><a href="email-inbox.html">Inbox</a></li>
+                      <li><a href="email-read.html">Read Email</a></li>
+                      <li><a href="email-compose.html">Compose Email</a></li>
+                  </ul>
+              </li>
+
+              <li>
+                  <a href="javascript: void(0);"><i class="fas fa-columns"></i> <span> Layouts </span> <span class="menu-arrow"></span></a>
+                  <ul class="nav-second-level collapse" aria-expanded="false">
+                      <li><a href="layouts-menucollapsed.html">Menu Collapsed</a></li>
+                      <li><a href="layouts-small-menu.html">Small Menu</a></li>
+                      <li><a href="layouts-dark-lefbar.html">Dark Leftbar</a></li>
+                      <li><a href="layouts-center-logo.html">Center Logo</a></li>
+                  </ul>
+              </li>
+
+              <li>
+                  <a href="javascript: void(0);"><i class="fas fa-columns"></i> <span> UI Elements </span> <span class="menu-arrow"></span></a>
+                  <ul class="nav-second-level collapse" aria-expanded="false">
+                      <li><a href="ui-typography.html">Typography</a></li>
+                      <li><a href="ui-cards.html">Cards</a></li>
+                      <li><a href="ui-buttons.html">Buttons</a></li>
+                      <li><a href="ui-modals.html">Modals</a></li>
+                      <li><a href="ui-spinners.html">Spinners</a></li>
+                      <li><a href="ui-ribbons.html">Ribbons</a></li>
+                      <li><a href="ui-tooltips-popovers.html">Tooltips & Popover</a></li>
+                      <li><a href="ui-checkbox-radio.html">Checkboxs-Radios</a></li>
+                      <li><a href="ui-tabs.html">Tabs</a></li>
+                      <li><a href="ui-progressbars.html">Progress Bars</a></li>
+                      <li><a href="ui-notifications.html">Notification</a></li>
+                      <li><a href="ui-grid.html">Grid</a></li>
+                      <li><a href="ui-sweet-alert.html">Sweet Alert</a></li>
+                      <li><a href="ui-bootstrap.html">Bootstrap UI</a></li>
+                      <li><a href="ui-range-slider.html">Range Slider</a></li>
+                  </ul>
+              </li>
+
+              <li>
+                  <a href="javascript: void(0);"><i class="fas fa-columns"></i> <span> Multi Level </span> <span class="menu-arrow"></span></a>
+                  <ul class="nav-second-level nav collapse" aria-expanded="false">
+                      <li><a href="javascript: void(0);">Level 1.1</a></li>
+                      <li><a href="javascript: void(0);" aria-expanded="false">Level 1.2 <span class="menu-arrow"></span></a>
+                          <ul class="nav-third-level nav" aria-expanded="false">
+                              <li><a href="javascript: void(0);">Level 2.1</a></li>
+                              <li><a href="javascript: void(0);">Level 2.2</a></li>
+                          </ul>
+                      </li>
+                  </ul>
+              </li>
+
+          </ul>
+
+      </div>
+      <!-- Sidebar -->
+
+      <div class="clearfix"></div>
+
+  </div>
+  <!-- Sidebar -left -->
+
+</div>
